--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
+    "react-timeago": "^3.4.3",
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
     "redux-promise": "^0.5.3",
@@ -20,5 +22,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "devDependencies": {}
 }
